--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #87ceeb;
+  // background-color: #87ceeb;
+  background-color: #e8e8e8;
 }
 
 .main {
